[project]
name = "gemini-tavily-search-agent"
version = "0.1.0"
description = "A web search agent powered by Gemini and Tavily"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=0.9.9",
    "google-genai>=1.71.0",
    "tavily-python>=1.1.0",
]

[tool.uv]
managed = true
